--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/bootstrap/css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="/fontawesome/css/all.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <!-- <link rel="stylesheet" href="styles.css" /> -->
+    <link rel="stylesheet" href="/css/styles.css">
 
     <title>Document</title>
   </head>
@@ -144,7 +145,7 @@
     <section class="discover-our-menu">
       <div class="restaurant-info row">
         <div class="gallery col-md-6 scaleUp-v1">
-          <div class="image-group">
+          <div class="image-group p-md-5">
             <img src="images/menu-group-1.jpg" alt="" />
             <img src="images/menu-group-2.jpg" alt="" />
             <img src="images/menu-group-3.jpg" alt="" />
@@ -275,18 +276,12 @@
             <div class="newsletter-container m-4">
               <h4>Newsletter</h4>
               <form action="" class="newsletter-form">
-                <div class="input-group mb-3">
-                  <input
-                    type="text"
-                    class="form-control ml-2"
-                    placeholder="Your email address..."
-                    aria-label="email"
-                    aria-describedby="basic-addon1"
-                  />
-                  <button class="btn input-group-append">
-                    <!-- <span class="input-group-text" id="basic-addon1">@</span> -->
-                    <i class="fas fa-envelope input-group-text"></i>
-                  </button>
+                  <div class="input-group mb-3">
+                    <input class="" type="text" class="form-control" placeholder="Your email address..." aria-label="Your email address..." aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                      <button class="btn " type="button"><i class="fas fa-envelope"></i></button>
+                    </div>
+                  </div>
                 </div>
               </form>
           </div>
