--- a/src/template.html
+++ b/src/template.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- <link rel="stylesheet" href="./src/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./src/bootstrap/css/bootstrap-reboot.min.css" /> -->
-    <link rel="stylesheet" href="./src/fontawesome/css/all.css" />
-    <!-- <link rel="stylesheet" href="./src/css/styles.css"> -->
-
     <title>Document</title>
   </head>
   <body class="">
@@ -116,7 +111,7 @@
           <div class="restaurant-info-img col-md-6">
             <div class="d-flex h-100">
               <div class="m-auto py-5 fromRight">
-                <img src="./src/images/our-story-1.jpg" alt="" />
+                <img src="./images/our-story-1.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -145,10 +140,10 @@
       <div class="restaurant-info row">
         <div class="gallery col-md-6 scaleUp-v1">
           <div class="image-group p-md-5">
-            <img src="./src/images/menu-group-1.jpg" alt="" />
-            <img src="./src/images/menu-group-2.jpg" alt="" />
-            <img src="./src/images/menu-group-3.jpg" alt="" />
-            <img src="./src/images/menu-group-4.jpg" alt="" />
+            <img src="./images/menu-group-1.jpg" alt="" />
+            <img src="./images/menu-group-2.jpg" alt="" />
+            <img src="./images/menu-group-3.jpg" alt="" />
+            <img src="./images/menu-group-4.jpg" alt="" />
           </div>
         </div>
         <div class="restaurant-description text-center col-md-6 scaleUp-v2">
@@ -217,12 +212,12 @@
         </div>
         <div class="image-group img-v2 col-md-6">
           <div class="swipe-down">
-            <img class="animate-top" src="./src/images/delight-group-1.jpg" alt="" />
+            <img class="animate-top" src="./images/delight-group-1.jpg" alt="" />
           </div>
           <div class="swipe-up">
             <img
               class="animate-bottom"
-              src="./src/images/delight-group-2.jpg"
+              src="./images/delight-group-2.jpg"
               alt=""
             />
           </div>
@@ -241,7 +236,7 @@
         <div class="footer-content">
           <div class="footer-content-about scaleUp-v4">
             <h4>About Rosa</h4>
-            <div class="asterisk"><i class="far fa-asterisk"></i></div>
+            <div class="asterisk"><i class="fas fa-asterisk"></i></div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
               explicabo alias non quae! Facilis, deserunt? Possimus pariatur ut
@@ -287,14 +282,7 @@
         </div>
       </div>
     </footer>
-
-
-    <!-- <script src="./src/jquery/jquery-3.5.1.min.js"></script>
-    <script src="./src/popper/popper.min.js"></script>
-    <script src="./src/bootstrap/js/bootstrap.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/ScrollTrigger.min.js"></script>
-    <!-- <script src="./src/js/gsap.js"></script> -->
-    <script src="./dist/main.js"></script>
   </body>
 </html>
