--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!-- <link rel="stylesheet" href="./src/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./src/bootstrap/css/bootstrap-reboot.min.css" /> -->
+    <link rel="stylesheet" href="./src/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./src/bootstrap/css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="./src/fontawesome/css/all.css" />
-    <!-- <link rel="stylesheet" href="./src/css/styles.css"> -->
+    <link rel="stylesheet" href="./src/css/styles.css">
 
     <title>Document</title>
   </head>
@@ -289,12 +289,11 @@
     </footer>
 
 
-    <!-- <script src="./src/jquery/jquery-3.5.1.min.js"></script>
+    <script src="./src/jquery/jquery-3.5.1.min.js"></script>
     <script src="./src/popper/popper.min.js"></script>
-    <script src="./src/bootstrap/js/bootstrap.min.js"></script> -->
+    <script src="./src/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/ScrollTrigger.min.js"></script>
-    <!-- <script src="./src/js/gsap.js"></script> -->
-    <script src="./dist/main.js"></script>
+    <script src="./src/js/gsap.js"></script>
   </body>
 </html>
