--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./src/bootstrap/css/bootstrap.min.css" />
+    <!-- <link rel="stylesheet" href="./src/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./src/bootstrap/css/bootstrap-reboot.min.css" />
     <link rel="stylesheet" href="./src/fontawesome/css/all.css" />
-    <link rel="stylesheet" href="./src/css/styles.css">
+    <link rel="stylesheet" href="./src/css/styles.css"> -->
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
 
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./src/css/styles.css">
     <title>Document</title>
   </head>
   <body class="">
@@ -235,7 +253,7 @@
         <div class="back-to-top">
           <div class="">
 
-            <a href="#" id=""><span><i class="fas fa-chevron-up pointer"></i></span></a>
+            <a href="#" id=""><span><i class="fas fa-chevron-up pointer"><span class="sr-only">home</span></i></span></a>
           </div>
         </div>
         <div class="footer-content">
@@ -255,19 +273,19 @@
                 <h4>Follow along</h4>
                 <ul class="social-icons d-flex justify-content-between">
                   <li>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-twitter"><span class="sr-only">Home</span></i></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a href="#"><i class="fab fa-facebook-square"><span class="sr-only">Home</span></i></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                    <a href="#"><i class="fab fa-pinterest"><span class="sr-only">Home</span></i></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"><span class="sr-only">Home</span></i></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fab fa-tripadvisor"></i></a>
+                    <a href="#"><i class="fab fa-tripadvisor"><span class="sr-only">Home</span></i></a>
                   </li>
                 </ul>
               </div>
@@ -289,9 +307,24 @@
     </footer>
 
 
-    <script src="./src/jquery/jquery-3.5.1.min.js"></script>
+        <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+    <!-- <script src="./src/jquery/jquery-3.5.1.min.js"></script>
     <script src="./src/popper/popper.min.js"></script>
-    <script src="./src/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./src/bootstrap/js/bootstrap.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/ScrollTrigger.min.js"></script>
     <script src="./src/js/gsap.js"></script>
