--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content="Rosa">
+    <link
+    rel="stylesheet"
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+    crossorigin="anonymous"
+  />
+
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" async
+  />
+  <!-- Bootstrap CSS -->
+  <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous"
+  />
     <title>Document</title>
   </head>
   <body class="">
@@ -50,12 +69,14 @@
       </nav>
     </header>
     <section class="hero" id="hero">
-      <div class="container d-flex" style="height: 90vh">
+      <div class="container d-flex " style="height: 90vh">
         <div class="m-auto">
-          <h2 class="sub-headline">
-            <span class="first-letter">W</span>elcome
-          </h2>
-          <h1 class="headline">The Rosa</h1>
+          <div class="first-animation">
+            <h1 class="sub-headline h4">
+              <span class="first-letter">W</span>elcome
+            </h1>
+            <h2 class="headline h3">The Rosa</h2>
+          </div>
           <div class="headline-description">
             <div class="separator">
               <div class="line line-left"></div>
@@ -63,7 +84,7 @@
               <div class="line line-right"></div>
             </div>
             <div class="single-animation">
-              <h5>Ready to be opened</h5>
+              <h3 class="text-center text-white my-3">Ready to be opened</h3>
               <div class="d-flex justify-content-center">
                 <button
                   class="btn btn-light btn-lg cta-btn"
@@ -85,10 +106,10 @@
             <div class="d-flex h-100">
               <div class="m-auto fromLeft">
                 <div class="global-headline">
-                  <h2 class="sub-headline">
+                  <h1 class="sub-headline h2">
                     <span class="first-letter">D</span>iscover
-                  </h2>
-                  <h1 class="headline headline-dark">Our Story</h1>
+                  </h1>
+                  <h2 class="headline headline-dark h1">Our Story</h2>
                   <div class="asterisk my-4">
                     <i class="fas fa-asterisk"></i>
                   </div>
@@ -124,12 +145,12 @@
         <div class="d-flex" style="height: 65vh">
           <div class="m-auto">
             <div class="animate-top">
-              <h2 class="sub-headline">
+              <h1 class="sub-headline h2">
                 <span class="first-letter">T</span>asteful
-              </h2>
+              </h1>
             </div>
             <div class="animate-bottom">
-              <h1 class="headline">Recipes</h1>
+              <h2 class="headline h1">Recipes</h2>
             </div>
           </div>
         </div>
@@ -150,10 +171,10 @@
           <div class="d-flex h-100">
             <div class="m-auto">
               <div class="global-headline">
-                <h2 class="sub-headline">
+                <h1 class="sub-headline h2">
                   <span class="first-letter">D</span>iscover
-                </h2>
-                <h1 class="headline headline-dark">Menu</h1>
+                </h1>
+                <h2 class="headline headline-dark h1">Menu</h2>
                 <div class="asterisk py-4"><i class="fas fa-asterisk"></i></div>
               </div>
               <p>
@@ -175,12 +196,12 @@
         <div class="d-flex" style="height: 65vh">
           <div class="m-auto">
             <div class="animate-top-v2">
-              <h2 class="sub-headline">
+              <h1 class="sub-headline h2">
                 <span class="first-letter">T</span>he perfect
-              </h2>
+              </h1>
             </div>
             <div class="animate-bottom-v2">
-              <h1 class="headline">Blend</h1>
+              <h2 class="headline h1">Blend</h2>
             </div>
           </div>
         </div>
@@ -193,10 +214,10 @@
           <div class="d-flex h-100">
             <div class="m-auto">
               <div class="global-headline">
-                <h2 class="sub-headline">
+                <h1 class="sub-headline h2">
                   <span class="first-letter">C</span>ulinary
-                </h2>
-                <h1 class="headline headline-dark">Delight</h1>
+                </h1>
+                <h2 class="headline headline-dark h1">Delight</h2>
                 <div class="asterisk"><i class="fas fa-asterisk"></i></div>
               </div>
               <p>
@@ -230,13 +251,13 @@
         <div class="back-to-top">
           <div class="">
 
-            <a href="#" id=""><span><i class="fas fa-chevron-up pointer"></i></span></a>
+            <a href="#" id=""><span><i class="fas fa-chevron-up pointer"><span class="sr-only">home</span></i></span></a>
           </div>
         </div>
         <div class="footer-content">
           <div class="footer-content-about scaleUp-v4">
             <h4>About Rosa</h4>
-            <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+            <div class="asterisk"><i class="far fa-asterisk"></i></div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
               explicabo alias non quae! Facilis, deserunt? Possimus pariatur ut
@@ -250,27 +271,27 @@
                 <h4>Follow along</h4>
                 <ul class="social-icons d-flex justify-content-between">
                   <li>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-twitter"><span class="sr-only">Home</span></i></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a href="#"><i class="fab fa-facebook-square"><span class="sr-only">Home</span></i></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                    <a href="#"><i class="fab fa-pinterest"><span class="sr-only">Home</span></i></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"><span class="sr-only">Home</span></i></a>
                   </li>
                   <li>
-                    <a href="#"><i class="fab fa-tripadvisor"></i></a>
+                    <a href="#"><i class="fab fa-tripadvisor"><span class="sr-only">Home</span></i></a>
                   </li>
                 </ul>
               </div>
             </div>
             <div class="newsletter-container m-4">
-              <h4>Newsletter</h4>
+              <h4 class="mb-0">Newsletter</h4>
               <form action="" class="newsletter-form">
-                  <div class="input-group mb-3">
+                  <div class="input-group mb-1">
                     <input class="" type="text" class="form-control" placeholder="Your email address..." aria-label="Your email address..." aria-describedby="basic-addon2">
                     <div class="input-group-append">
                       <button class="btn " type="button"><i class="fas fa-envelope"></i></button>
@@ -282,6 +303,21 @@
         </div>
       </div>
     </footer>
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"
+  ></script>
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"
+  ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.3/ScrollTrigger.min.js"></script>
   </body>
