made image responsive

--- a/src/template.html
+++ b/src/template.html
@@ -309,7 +309,7 @@
         </div>
         <div class="image-group img-v2 col-md-6">
           <div class="swipe_down">
-            <!-- <picture>
+            <picture>
               <source
                 media="(min-width: 1024px)"
                 srcset="./images/delight-group-1-large.jpg"
@@ -323,17 +323,7 @@
                 srcset="./images/delight-group-1-small.jpg"
               />
               <img src="./images/delight-group-1-extra_small.jpg" alt="" />
-            </picture> -->
-            <img
-              src="./images/delight-group-1-extra_small.jpg"
-              srcset="
-                ./images/delight-group-1-extra_small.jpg  500w,
-                ./images/delight-group-1-small.jpg        800w,
-                ./images/delight-group-1-medium.jpg      1200w,
-                ./images/delight-group-1-large.jpg       1500w
-              "
-              sizes="100vw"
-            />
+            </picture>
           </div>
           <div class="swipe_up">
             <picture>
